Edited Panel to be responsive to smartphones.

--- a/src/main/resources/templates/fragments/colorlist.html
+++ b/src/main/resources/templates/fragments/colorlist.html
@@ -14,7 +14,8 @@
              <div id="addColor"
                   class="box
                          p-2
-                         col-1"
+                         col-lg-1
+                         col-sm-2"
                   onclick="addColor()">
                   <img src="/img/add.svg">
              </div>
