--- a/src/main/resources/templates/fragments/durationpane.html
+++ b/src/main/resources/templates/fragments/durationpane.html
@@ -6,18 +6,18 @@
 <body>
 
 <div th:fragment="durationpane"
-     class="container
-            pane-duration
+     class="pane-duration
             mb-1">
     <div class="box
                 darker">
-        <h3>Dauer</h3>
+        <div class="headline">Dauer</div>
     </div>
     <!--Sekunden-->
     <div class="box
                 pb-1">
         <div class="row">
-            <h6 class="container">Sekunden</h6>
+            <div class="container
+                        headline-small">Sekunden</div>
         </div>
         <div class="row">
             <div class="col-1
@@ -49,7 +49,8 @@
     <div class="box
                 pb-1">
         <div class="row">
-            <h6 class="container">Minuten</h6>
+            <div class="container
+                       headline-small">Minuten</div>
         </div>
         <div class="row">
             <div class="col-1
@@ -81,7 +82,8 @@
     <div class="box
                 pb-1">
         <div class="row">
-            <h6 class="container">Stunden</h6>
+            <div class="container
+                       headline-small">Stunden</div>
         </div>
         <div class="row">
             <div class="col-1
@@ -113,7 +115,8 @@
     <div class="box
                 pb-1">
         <div class="row">
-            <h6 class="container">Tage</h6>
+            <div class="container
+                       headline-small">Tage</div>
         </div>
         <div class="row">
             <div class="col-1
