--- a/src/main/resources/templates/fragments/grouplist.html
+++ b/src/main/resources/templates/fragments/grouplist.html
@@ -9,15 +9,22 @@
      id="grouplist"
      class="list-vertical
             col-2
-            m-3
+            m-lg-3
+            m-sm-0
+            my-sm-3
             p-0">
     <div id="addGroup"
          class="box
                 row"
          onclick="showCreateGroupOverlay()">
-        <div class="col-6
-                    offset-3
-                    pt-2">
+        <div class="col-lg-6
+                    col-sm-8
+                    offset-sm-2
+                    offset-lg-3
+                    pb-lg-0
+                    pb-sm-1
+                    pt-lg-2
+                    pt-sm-0">
             <img src="/img/add.svg">
         </div>
     </div>
