--- a/src/main/resources/templates/fragments/modepane.html
+++ b/src/main/resources/templates/fragments/modepane.html
@@ -11,7 +11,7 @@
             pane-mode">
     <div class="box
                 darker">
-        <h3 class="container">Modus</h3>
+        <div class="container headline">Modus</div>
     </div>
     <div class="row
                 box
@@ -28,7 +28,11 @@
             </label>
         </div>
         <div class="col-10
-                    pb-1">
+                    pb-lg-1
+                    pb-sm-0
+                    pt-sm-1
+                    pt-lg-0
+                    headline">
             Überlaufende Farben
         </div>
     </div>
