--- a/src/main/resources/static/css/panel.css
+++ b/src/main/resources/static/css/panel.css
@@ -6,7 +6,7 @@
 body {
     background: url("/img/background.jpg");
     background-size: cover;
-    background-repeat:   no-repeat;
+    background-repeat: no-repeat;
     overflow-x: hidden;
 }
 
@@ -31,7 +31,7 @@ input[type=number] {
 #logo {
     width: 35%;
     opacity: 0.8;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 .pane-main {
@@ -222,7 +222,7 @@ input[type=number] {
     background-color: #0071d5;
 }
 
-.group-name {
+.group-name, .module-name {
     font-size: 20px;
 }
 
@@ -284,10 +284,6 @@ input[type=number] {
     margin: 5px;
 }
 
-.module-name {
-    font-size: 20px;
-}
-
 .module-assigned {
     background-color: #0cb200;
     margin: 5px;
@@ -304,4 +300,134 @@ input[type=number] {
 
 .unchecked {
     display: none;
+}
+
+#group-name-headline {
+    font-size: 30px;
+}
+
+.headline {
+    font-size: 20px;
+}
+
+.headline-overlay {
+    font-size: 30px;
+}
+
+.headline-small {
+    font-size: 15px;
+}
+
+@media only screen and (max-width: 1080px) and (max-height: 900px) {
+
+    body {
+        background-size: auto;
+    }
+
+    #logo {
+        width: 60%;
+    }
+
+    .group-name, .module-name {
+        font-size: 10px;
+    }
+
+    .btn-remove {
+        height: 100%;
+    }
+
+    .btn-rename {
+        height: 100%;
+    }
+
+    .button-ok {
+        width: 20%;
+        padding-top: 2px;
+        padding-bottom: 3px;
+    }
+
+    .overlay .button-ok {
+        width: 40%;
+        height: 100%;
+        padding-right: 5px;
+        padding-left: 5px;
+        float: left;
+    }
+
+    .overlay .button-decline {
+        width: 40%;
+        height: 100%;
+        padding-right: 5px;
+        padding-left: 5px;
+        float: right;
+    }
+
+    .group img, .module img {
+        height: 40%;
+        width: 40%;
+        margin-top: -5px;
+    }
+
+    #group-name-headline {
+        font-size: 20px;
+    }
+
+    .headline {
+        font-size: 15px;
+    }
+
+    .headline-overlay {
+        font-size: 20px;
+    }
+
+    .headline-small {
+        font-size: 10px;
+    }
+
+    input[type=number] {
+        background-color: black;
+        -webkit-appearance: textfield;
+        -moz-appearance: textfield;
+        margin: 0;
+        width: 100%;
+        border: solid gray 1px;
+        font-size: smaller;
+    }
+
+    .overlay {
+        position: absolute;
+        z-index: 5;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(30, 30, 30, 0.86);
+    }
+
+    .overlay-panel {
+        background-color: #4e4e4e;
+        box-shadow: 0 0 2px 1px rgb(0, 0, 0);
+        border-radius: 3px;
+        height: 100%;
+    }
+
+    .overlay {
+        position: absolute;
+        z-index: 5;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(30, 30, 30, 0.86);
+    }
+
+    .overlay-panel {
+        height: 100%;
+    }
+
+    #overlay-input {
+        border: solid black 2px;
+        color: black;
+        font-size: 15px;
+    }
+
+    .group, .module {
+        text-align: center;
+    }
 }
