--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="#{application.name}"></title>
     <link type="text/css" rel="stylesheet" href="/css/bootstrap4.css">
     <script src="/js/jquery.js"></script>
@@ -18,15 +19,17 @@
                     container
                     pane-main
                     mt-4">
-            <div class="row
-                        p-3">
+            <div class="row">
                 <div th:replace="~{fragments/grouplist.html :: grouplist}"></div>
                 <div class="container
                             col-7
-                            m-3">
+                            m-3
+                            p-0">
                     <img id="logo"
                          src="/img/logo.png">
-                    <h2 id="group-name-headline">Groupname</h2>
+                    <div id="group-name-headline"
+                         class="mb-sm-2">
+                    </div>
                     <div th:replace="~{fragments/options.html :: options}"></div>
                     <div th:replace="~{fragments/colorlist.html :: colorlist}"></div>
                     <div id="button-send-command"
