Optimized frontend overlay buttons

--- a/src/main/resources/templates/fragments/overlay.html
+++ b/src/main/resources/templates/fragments/overlay.html
@@ -131,10 +131,11 @@
             </div>
             <div id="overlay-confirmGroup">
                 <div class="row">
-                    <div class="col-4
-                                offset-4">
+                    <div class="col-lg-3
+                                col-sm-4
+                                btngroup">
                         <div class="button-decline
-                                    pt-lg-2
+                                    pt-lg-1
                                     pt-sm-0
                                     float-none"
                              style="margin: auto"
@@ -146,16 +147,17 @@
             </div>
             <div id="overlay-affirmationGroup">
                 <div class="row">
-                    <div class="col-4
-                                offset-4">
+                    <div class="col-lg-3
+                                col-sm-4
+                                btngroup">
                         <div class="button-ok
-                                    pt-lg-2
+                                    pt-lg-1
                                     pt-sm-0"
                              onclick="createGroup()">
                             <img src="/img/accept.svg">
                         </div>
                         <div class="button-decline
-                                    pt-lg-2
+                                    pt-lg-1
                                     pt-sm-0"
                              onclick="closeOverlay()">
                             <img src="/img/remove.svg">
@@ -169,16 +171,17 @@
                        type="text"
                        maxlength="15">
                 <div class="row">
-                    <div class="col-4
-                                offset-4">
+                    <div class="col-lg-3
+                                col-sm-4
+                                btngroup">
                         <div class="button-ok
-                                    pt-lg-2
+                                    pt-lg-1
                                     pt-sm-0"
                              onclick="createGroup()">
                             <img src="/img/accept.svg">
                         </div>
                         <div class="button-decline
-                                    pt-lg-2
+                                    pt-lg-1
                                     pt-sm-0"
                              onclick="closeOverlay()">
                             <img src="/img/remove.svg">
