--- a/src/main/resources/static/css/panel.css
+++ b/src/main/resources/static/css/panel.css
@@ -105,11 +105,6 @@ input[type=number] {
     background-color: #a70001;
 }
 
-.button-decline img {
-    width: 80%;
-    height: 60%;
-}
-
 .duration-button{
     background-color: #687379;
     box-shadow: black 0 0 2px 0;
@@ -318,6 +313,32 @@ input[type=number] {
     font-size: 15px;
 }
 
+.overlay .button-ok img {
+    width: 80%;
+    height: 80%;
+}
+
+.button-decline img {
+    width: 80%;
+    height: 80%;
+}
+
+.overlay .button-ok {
+    float: left;
+    width: 30%;
+    height: 100%;
+}
+
+.overlay .button-decline {
+    float: right;
+    width: 30%;
+    height: 100%;
+}
+
+.btngroup {
+    margin-left: 38%;
+}
+
 @media only screen and (max-width: 1080px) and (max-height: 900px) {
 
     body {
@@ -429,5 +450,17 @@ input[type=number] {
 
     .group, .module {
         text-align: center;
+    }
+
+    .overlay .button-ok {
+        float: left;
+    }
+
+    .overlay .button-decline {
+        float: right;
+    }
+
+    .btngroup {
+        margin-left: 35%;
     }
 }
