--- a/src/main/resources/static/css/panel.css
+++ b/src/main/resources/static/css/panel.css
@@ -69,6 +69,7 @@ input[type=number] {
     overflow: auto;
     overflow-y: auto;
     overflow-x: hidden;
+    height: available;
 }
 
 .list-horizontal {
