--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -18,6 +18,10 @@ input {
     font-size: large;
 }
 
+button {
+    width: 40%;
+}
+
 .row {
     margin: 0;
 }
@@ -49,4 +53,12 @@ input {
     border: red solid 2px;
     border-radius: 5px;
     padding: 3px;
+    width: 40%;
+    margin: auto;
+}
+
+@media only screen and (max-width: 1080px) and (max-height: 900px) {
+    .pane-main {
+        margin-top: 5%;
+    }
 }
