--- a/src/main/resources/templates/sites/login.html
+++ b/src/main/resources/templates/sites/login.html
@@ -24,10 +24,10 @@
                     text-center">
             <img id="logo"
                  class="mt-3"
-                 src="/img/logo.png">
+                 src="/img/logo3.png">
             <form action="/login"
                   method="post"
-                  class="mt-5">
+                  class="mt-4">
                 <input name="username"
                        type="hidden"
                        th:value="mylightsuser">
