--- a/src/main/resources/templates/sites/panel.html
+++ b/src/main/resources/templates/sites/panel.html
@@ -27,7 +27,7 @@
                             m-sm-3
                             p-0">
                     <img id="logo"
-                         src="/img/logo.png">
+                         src="/img/logo3.png">
                     <div id="group-name-headline"
                          class="mb-sm-2">
                     </div>
